# heartbeat_detector

./: .example.config.yaml  .flake8  .gitattributes  .gitignore  README.md  example_config.yaml  pyproject.toml  source.py  torch2onnx.py  transform_labels.py
heartbeat_detector/cli/: torch2onnx.py  train_model.py
heartbeat_detector/configs/: train_config.py
heartbeat_detector/dataset/: dataset.py
heartbeat_detector/generate_dataset/: generate_dataset.py  selector.py
heartbeat_detector/models/: unet_1d.py
heartbeat_detector/train/: model_saver.py  train.py
notebooks/: filter_bad_signals.ipynb  receptive_field.ipynb  signal_visualize.ipynb  signals.ipynb  test.ipynb  test_model.ipynb
requirements/: dev.in  dev.txt  requirements.in  requirements.txt
src/configs/: train_config.py
src/dataset/: dataset.py
src/generate_dataset/: __init__.py  generate_dataset.py  label_transformers.py  raw_data_processor.py  raw_data_reader.py  selector.py
src/heartbeat_detector/: test.py  types.py  utils.py
src/heartbeat_detector/cli/: test_model.py  torch2onnx.py  torch2torchscript.py  train_model.py
src/heartbeat_detector/configs/: train_config.py
src/heartbeat_detector/dataset/: __init__.py  dataset.py
src/heartbeat_detector/losses/: dice.py
src/heartbeat_detector/models/: __init__.py  unet_1d.py
src/heartbeat_detector/train/: train.py
src/models/: train.py  unet_1d.py
src/train/: model_saver.py  train.py  trainer.py
